# fmdetect

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  conanfile.txt  vim_examples.md
.github/workflows/: windows.yml
cmake/: SetupConan.cmake  TargetHelpers.cmake  WarningsAndOptions.cmake
include/: filetypeMatcher.h  filetype_matcher.h  get_special_filetype.h  matcher_helpers.h  matchers.h  patterns.h
include/FrameworkMatcher/: framework_matcher.h
include/Helpers/: matcher_helpers.h
include/Matchers/Cpp/: matchers.h
include/Matchers/Elixir/: matchers.h
include/Matchers/Python/: matchers.h
src/: filetype_matcher.cpp  fmdetect.cpp  framework_matcher.cpp  ftdetecter.cpp  get_special_filetype.cpp
src/FrameworkMatcher/: framework_matcher.cpp
test/: CMakeLists.txt  benchmark_match.cpp  catch2_match.cpp  gen_filepaths.py  gtest_match.cpp
test/testfiles/benchmark/: benchmark-test-1.cpp  benchmark-test-4.cpp
tests/: CMakeLists.txt  benchmark_match.cpp  catch2_match.cpp  exunit_match.cpp  gen_filepaths.py  gtest_match.cpp  pytest_match.cpp  unittest_match.cpp
tests/test_include/: generated_filepaths.h
tests/testfiles/benchmark/: benchmark-test-0.cpp  benchmark-test-2.cpp  benchmark-test-3.cpp
tests/testfiles/exunit/: test0.ex  test1.ex  test2.ex  test3.ex  test4.ex
